# HFPx2D

./: .gitignore  AssemblyDDM.cpp  AssemblyDDM.h  CMakeLists.txt  Coh_Col_Partial.cpp  Coh_Col_Partial.h  Coh_Linear_softening.cpp  Coh_Linear_softening.h  Coh_Prop_Col.cpp  Coh_Prop_Col.h  Coh_Prop_new.cpp  Coh_Prop_new.h  Coh_Propagation.cpp  Coh_Propagation.h  ConductivitiesNewtonian.cpp  ConductivitiesNewtonian.h  DOF_Handles.cpp  DOF_Handles.h  Dilatancy.cpp  Dilatancy.h  EHLDs.cpp  EHLDs.h  ELHDs.cpp  ELHDs.h  ELHDs_explicit.cpp  ELHDs_explicit.h  ELHDs_explicit_coupling.cpp  ELHDs_explicit_coupling.h  ELHDs_implicit.cpp  ELHDs_implicit.h  ELHDs_implicit_coupling.cpp  ELHDs_implicit_coupling.h  Elasticity2D.cpp  Elasticity2D.h  FVM.cpp  FVM.h  Fluid_coupled_by_elmt.cpp  Fluid_coupled_by_elmt.h  Friction.cpp  Friction.h  (+30 more)
Viscosity all nodes/: Viscosityallnodes.cpp  Viscosityallnodes.h
gtest/gtest/: gtest.h
gtest/gtest/internal/: gtest-param-util.h
il/: math.h
il/container/1d/: Array.h
il/pretty_print/lldb/: lldbinit
src/: AssemblyDDM.cpp  AssemblyDDM.h  ConductivitiesNewtonian.cpp  ConductivitiesNewtonian.h  DOF_Handles.cpp  DOF_Handles.h  Dilatancy.cpp  EHLDs.cpp  EHLDs.h  FVM.cpp  FVM.h  Friction.h  FromEdgeToCol.cpp  FromEdgeToCol.h  MC_criterion.h  Mesh.cpp  Mesh.h  TimeIncr.cpp  TimeIncr.h
src/Core/: Mesh.cpp  Mesh.h  SegmentData.h  SimulationParameters.h  SolidProperties.h  Solution.h  Sources.h  Utilities.cpp
src/Core_dev/: FractureEvolution.h  SolidEvolution.h
src/Devt/: ConductivitiesNewtonian.h  EHLDs.h  FiniteVolumeRoutines.cpp  FiniteVolumeRoutines.h  FromEdgeToCol.cpp  FromEdgeToCol.h  MC_criterion.cpp  TimeIncr.cpp  TimeIncr.h
src/Elasticity/: AssemblyDDM.cpp  AssemblyDDM.h  ElasticProperties.h  PlaneStrainInfinite.cpp  PlaneStrainInfinite.h  Simplified3D.cpp  Simplified3D.h
src/FluidFlow/: PermeabilityEvolution.h  ReynoldsP0.cpp  ReynoldsP0.h
src/FractureFluidFlow/: ReynoldsP0.cpp  ReynoldsP0.h  ReynoldsP1.cpp  ReynoldsP1.h
src/Input/: FindUtilities.h  LoadArguments.cpp  LoadInput.cpp  LoadInput.h
src/Input/Conditions/: LoadConditions.cpp  LoadConditions.h
src/Input/Geometry/: AutoLineMeshCreation.cpp  AutoLineMeshCreation.h  AutoLineMeshInfo.h  AutoLineMeshUtilities.cpp  AutoLineMeshUtilities.h  LoadGeometry.cpp  LoadGeometry.h  LoadMeshFile.cpp  LoadMeshFile.h
src/Input/Properties/: LoadProperties.cpp  LoadProperties.h  LoadSingleMaterial.h
src/Input/Sources/: LoadSources.cpp  LoadSources.h
src/Mesh/: DOF_Handles.h  Mesh.cpp  Mesh.h
src/Problems/: FluidInj_FricDilatFault.cpp  FluidInj_FricDilatFault.h
src/Solvers/: DevLHFMSolver.cpp  DevLHFMSolver.h  FluidInjFrictWeakDilatFault.cpp  FluidInjFrictWeakDilatFault.h  SimpleElastic.cpp  SimpleElastic.h  ToughnessDominated.cpp  ToughnessDominated.h
src/Tip/: TipAsymptote.cpp  TipAsymptote.h
src/_test/: FV_test.cpp  domain_mesh_test.cpp  elastic_benchmarks.cpp  elastic_test.cpp  mesh_test.cpp
src/core/: Conditions.h  DOF_Handles.cpp  DOF_Handles.h  DomainMesh.h  ElasticProperties.h  Fluid.h  FluidEvolution.h  FluidProperties.h  InSituConditions.h  InSituStress.h  Mesh.cpp  Mesh.h  Properties.cpp  Properties.h  RockProperties.h  SegmentData.cpp  SegmentData.h  Simulation.h  SimulationParameters.h  Solid.h  SolidEvolution.h  SolidProperties.h  Solution.h  SolutionAtT.h  SolutionClass.h  Sources.cpp  Sources.h  Utilities.cpp  Utilities.h  iterative_loop.cpp  iterative_loop.h  loadArguments.cpp  loadArguments.h  loadInput.cpp  loadInput.h  matrix_utilities.cpp  matrix_utilities.h  segmentData.cpp  segmentData.h  utilities.cpp  (+1 more)
src/core_dev/: FractureEvolution.h  OldSolutionClass.h  Properties.h  Simulation.h  SolidEvolution.h  SolutionClass.h  Sources.h
src/devt/: Dilatancy.cpp  EHLDs.cpp  EHLDs.h  FVM.cpp  FVM.h  FiniteVolumeRoutines.cpp  FiniteVolumeRoutines.h  Friction.h  FromEdgeToCol.cpp  FromEdgeToCol.h  IterativeSolvers.cpp  IterativeSolvers.h  MC_criterion.cpp  MC_criterion.h  Output_results.h  Permeability.h  TimeIncr.cpp  iterativeLoop.cpp  iterativeLoop.h  iterative_loop.h
src/ehlsolvers/: FiniteVolumeRoutines.cpp  FiniteVolumeRoutines.h  ReynoldsP0.cpp  ReynoldsP1.cpp  ReynoldsP1.h
src/elasticity/: AssemblyDDM.cpp  AssemblyDDM.h  PlaneStrainInfinite.cpp  PlaneStrainInfinite.h  Simplified3D.cpp  Simplified3D.h
src/elasticity/_test/: elasticity_tests.cpp
src/elhsolvers/: ReynoldsP0.cpp  ReynoldsP1.cpp  ReynoldsP1.h
src/input/: FindUtilities.cpp  FindUtilities.h  LoadArguments.cpp  LoadArguments.h  LoadInput.cpp  LoadInput.h  findUtilities.cpp  findUtilities.h  loadArguments.cpp  loadArguments.h  loadInput.cpp  loadInput.h
src/input/Conditions/: LoadConditions.cpp  LoadConditions.h
src/input/Geometry/: AutoLineMeshCreation.cpp  AutoLineMeshCreation.h  AutoLineMeshInfo.cpp  AutoLineMeshInfo.h  LoadGeometry.cpp  LoadGeometry.h
src/input/Properties/: LoadProperties.cpp  LoadProperties.h  LoadSingleMaterial.cpp  LoadSingleMaterial.h
src/input/Sources/: LoadSources.cpp  LoadSources.h  loadSources.cpp  loadSources.h
src/input/conditions/: LoadConditions.h  loadConditions.cpp  loadConditions.h
src/input/geometry/: AutoLineMeshInfo.h  LoadGeometry.h  autoLineMeshCreation.cpp  autoLineMeshCreation.h  autoLineMeshInfo.cpp  autoLineMeshInfo.h  autoLineMeshUtilities.cpp  autoLineMeshUtilities.h  autoMeshUtilities.cpp  autoMeshUtilities.h  createMesh.cpp  createMesh.h  customOrientation.cpp  (+11 more)
src/solvers/: DevLHFMSolver.cpp  DevLHFMSolver.h  FluidInjFrictWeakDilatFault.cpp  FluidInjFrictWeakDilatFault.h  HFPropagationP0.cpp  HFPropagationP0.h  MultiFracsSolution.h  MultiFracsSolver.cpp  MultiFracsSolver.h  SimpleElastic.cpp  SimpleElastic.h  SimpleElasticBenchmarks.cpp  SimpleElasticBenchmarks.h
src/tip/: TipAsymptote.cpp  TipAsymptote.h  tipAsymptote.cpp  tipAsymptote.h
src/util/: RootFinder.cpp  RootFinder.h
src/wellbore/: LoadInputMultistage.cpp  LoadInputMultistage.h  SimpleWellFlowSolverBenchmark.cpp  SimpleWellFlowSolverBenchmark.h  WellFlowP0.cpp  WellFlowP0.h  WellInjection.cpp  WellInjection.h  WellMesh.cpp  WellMesh.h  WellSolution.h
(+45 files in other folders)
